glFusion ChangeLog

v1.1.9
------
- Administrative function access now requires the user to re-authenticate (Mark)
- New database function - DB_escapeString(), this should be used instead of
  addslashes() to escape data prior to using in a SQL query (Mark)
- Validate block name in blocks editor to ensure no space or other special
  characters (Mark)
- If errors during block edit, do not reset form, save data from submission
  so users do not loose data if an error (Mark)
- Do not use username as the name of the user's profile photo, use uid
  instead, this solves issues with various file systems (Mark)
- All Admin Utilities: User interface improvements & code scrub (Mark H.)
    - Improved/added language strings
    - Reformatted columns, new icons
    - Allow alignment of columns (left/center/right)
    - Extend/reformat 'check all' action col/row (eg. see User Batch Admin)
    - New 'Clear Search' button when search is used
    - Resubmit when select/checkbox/button is clicked
- Block Admin: User interface improvements (Mark H.)
    - Eliminate search/limit/paging options (they didn't work right anyway)
    - New feature: Delete (w/popup confirmation) direction from list
    - Disabled blocks displayed as 'greyed-out'
- User Admin: User interface improvement and code scrub (Mark H.)
    - Closer integration with Group Admin
    - New feature: Group filter/select dropdown (used by Group user list)
    - New feature: Send eMail to User via Mail Utility or local client
    - Batch Admin: User interface improvement, new eMail links, new action row
    - Pref Editor: Reformatted column
- Group Admin: User interface improvement and code scrub (Mark H.)
    - Closer integration with User Admin
    - New feature: Send eMail to Group via Mail Utility or local client
- Mail Utility: User interface improvements (Mark H.)
    - Template tweaked to make better use of vert/horiz space
    - New feature: Can be invoked from any (authenticated) site source