@@ -454,6 +454,10 @@ function glfusion_119()
     DB_query("ALTER TABLE {$_TABLES['users']} CHANGE `passwd` `passwd` VARCHAR( 40 ))",1);
 
     $c->add('article_comment_close_enabled',0,'select',4,21,0,1695,TRUE);
+    $c->add('session_ip_check',1,'select',7,30,26,545,TRUE);
+    $c->del('default_search_order','Core');
+
+    DB_query("UPDATE {$_TABLES['conf_values']} SET selectionArray = '0' WHERE name='searchloginrequired' AND group_name='Core'",1);
 
     DB_query("INSERT INTO {$_TABLES['vars']} SET value='1.1.9',name='glfusion'",1);
     DB_query("UPDATE {$_TABLES['vars']} SET value='1.1.9' WHERE name='glfusion'",1);
