@@ -1733,6 +1733,11 @@ stores the session ID. </td>
 <td class="col1 leftalign">Name of the permanent
 cookie. </td>
 </tr>
+<tr class="row1">
+<td class="col0 leftalign"><a name="desc_session_ip_check">Session IP Validation</a> </td>
+<td class="col1 leftalign">Determines how much of the users IP is used to validate a session; All compares the complete address, A.B.C the first x.x.x, A.B the first x.x, None disables checking.
+</td>
+</tr>
 <tr class="row2">
 <td class="col0 leftalign"><a name="desc_cookie_password">Password Cookie Name</a> </td>
 <td class="col1 leftalign">Name of the password
